<resources>
    <string name="app_name">EcommerceApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtAddress">The  Right Address\nFor Shipping\nEveryday</string>
    <string name="txtQuality">It\'s now easy to reach the \nbest quality among the \nproducts on the internet!</string>
    <string name="start">Start</string>
    <string name="kleine">Kleine.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="loginTxt">Let\'s Login</string>
    <string name="loginTxtInfo">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPwdTxt">Forgot Password?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="txtRegister">Let\'s Register</string>
    <string name="askLoginTxt">Do you have an account? Login</string>
    <string name="fName">First Name</string>
    <string name="LName">Last Name</string>
    <string name="resetPwd">Reset Password</string>
    <string name="txtResetPwd">We will send you the password reset link to your email</string>
    <string name="newPwd">Enter your Email</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="search">Search now</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="deals">Best Deals</string>
    <string name="products">Best Products</string>
    <string name="price">$1600</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="old_price">$2000</string>
    <string name="see_product">See product</string>
    <string name="chair">Chair</string>
    <string name="black_jeans">Black Jeans</string>
    <string name="_600">$6000</string>
    <string name="txtDesc">Black leather jeans.</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="s">S</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="_150">$150</string>
    <string name="check_out">Check out</string>
    <string name="empty">Your shopping cart is empty</string>
    <string name="_chair">Chair</string>
    <string name="_50">$50</string>
    <string name="_1">1</string>
    <string name="l">L</string>
    <string name="addresses">Addresses</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="_home">Home</string>
    <string name="chair_">Chair</string>
    <string name="billing">Billing</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="pay">Keline dose not support virtual payments. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="_total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="my_account">My account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="_email">Email</string>
    <string name="forgot_change_password">Forgot/Change password</string>
    <string name="_save">Save</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="all_orders">All orders</string>
    <string name="_1234567">#1234567</string>
    <string name="address">Address</string>
    <string name="_products">Products</string>
    <string name="total_">Total</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="edit_personal_details">edit personal details</string>
    <string name="orders">Orders</string>
    <string name="all_orders_">All orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="billing_">Billing</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="version_1_0">Version 1.0</string>
</resources>