<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/resetPwd"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_thin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/resetPasswordTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/txtResetPwd"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/resetPassword"
        app:layout_constraintTop_toBottomOf="@id/resetPassword"/>

    <EditText
        android:id="@+id/resetPwd"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/newPwd"
        android:inputType=""
        android:textColorHint="#A1887F"
        app:layout_constraintEnd_toEndOf="@id/resetPasswordTxt"
        app:layout_constraintStart_toStartOf="@id/resetPasswordTxt"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordTxt"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/resetPwd"
        app:layout_constraintStart_toStartOf="@id/resetPwd"
        app:layout_constraintTop_toBottomOf="@id/resetPwd">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetBtnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/white_background"
            tools:ignore="VisualLintButtonSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetBtnSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/blue_background"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>