<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/g_card_background"
    android:elevation="0dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="88dp">

        <ImageView
            android:id="@+id/imgBestDeals"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/bestDealProductName"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/scotch_premium"
            android:textColor="@color/black"
            android:textSize="9sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgBestDeals"
            app:layout_constraintTop_toTopOf="@id/imgBestDeals"
            tools:ignore="SmallSp,TextSizeCheck" />

        <TextView
            android:id="@+id/bestDealOldPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_price"
            app:layout_constraintTop_toBottomOf="@id/bestDealProductName"
            app:layout_constraintStart_toEndOf="@id/bestDealNewPrice"
            android:textColor="@color/g_gray700"
            android:textSize="12sp"
            android:fontFamily="@font/sf_pro_display"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/bestDealNewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="@id/bestDealProductName"
            app:layout_constraintTop_toBottomOf="@id/bestDealProductName"

            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/sf_pro_display"/>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_see_product"
            android:layout_width="83dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/see_product"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bestDealProductName"
            app:layout_constraintTop_toTopOf="@id/bestDealProductName"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>