<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".fragments.categories.ProductDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
         android:id="@+id/cardProductsImages"
         android:layout_width="0dp"
         android:layout_height="350dp"
         android:layout_marginTop="20dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent">

         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPagerProductImages"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>

         <ImageView
             android:id="@+id/image_close"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:padding="5dp"
             app:tint="@color/g_black"
             android:src="@drawable/ic_close"
             android:contentDescription="@string/app_name"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearTextPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@id/cardProductsImages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/productName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/h3"
                android:textStyle="bold"
                android:text="@string/black_jeans"/>

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h3"
                android:textColor="@color/g_gray700"
                android:text="@string/_600"/>

        </LinearLayout>

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:textColor="@color/g_gray700"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/txtDesc"
            app:layout_constraintTop_toBottomOf="@id/linearTextPrice"
            app:layout_constraintStart_toStartOf="@id/linearTextPrice" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/g_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productDescription"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/linearProductDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/line"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/line"
            android:layout_marginTop="30dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tvProductColors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/h3"
                    android:textColor="@color/black"
                    android:text="@string/color"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvColors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tvProductSizes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/h3"
                    android:textColor="@color/black"
                    android:text="@string/size"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSizes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnAddToCart"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/regBtnHt"
            android:text="@string/add_to_cart"
            app:spinning_bar_color="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/linearProductDesc"
            app:layout_constraintStart_toStartOf="@id/linearProductDesc"
            app:layout_constraintTop_toBottomOf="@id/linearProductDesc"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="VisualLintButtonSize" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>