<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="center"
        android:importantForAccessibility="no" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleText"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:text="@string/kleine"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintBottom_toBottomOf="@id/guidelineStartE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineStartT" />

        <TextView
            android:id="@+id/registerTxt"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRegister"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guidelineLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineStartE" />

        <TextView
            android:id="@+id/askLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/askLoginTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineLogin" />

        <EditText
            android:id="@+id/firstName"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:autofillHints=""
            android:hint="@string/fName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@id/guidelineVend"
            app:layout_constraintStart_toStartOf="@id/guidelineVstart"
            app:layout_constraintTop_toTopOf="@id/guidelineEditStart"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/lastName"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:autofillHints=""
            android:hint="@string/LName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@id/guidelineVend"
            app:layout_constraintStart_toStartOf="@id/guidelineVstart"
            app:layout_constraintTop_toTopOf="@id/guidelineStartSName"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/registerEmail"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelineVend"
            app:layout_constraintStart_toStartOf="@id/guidelineVstart"
            app:layout_constraintTop_toTopOf="@id/guidelineEmailStart"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/registerPass"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelineVend"
            app:layout_constraintStart_toStartOf="@id/guidelineVstart"
            app:layout_constraintTop_toTopOf="@id/guidelinePassStart"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnRegister"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/regBtnHt"
            android:text="@string/register"
            app:spinning_bar_color="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guidelineVend"
            app:layout_constraintStart_toStartOf="@id/guidelineVstart"
            app:layout_constraintTop_toTopOf="@id/guidelineRegisterBtn"
            tools:ignore="VisualLintButtonSize" />

        <ImageView
            android:id="@+id/facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@id/guidelineVstart"
            app:layout_constraintTop_toTopOf="@id/guidelineSocials"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txtFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintStart_toStartOf="@id/facebookLogin"
            app:layout_constraintEnd_toEndOf="@id/facebookLogin"
            app:layout_constraintTop_toTopOf="@id/facebookLogin"
            app:layout_constraintBottom_toBottomOf="@id/facebookLogin"/>


        <ImageView
            android:id="@+id/googleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toEndOf="@id/guidelineVend"
            app:layout_constraintTop_toBottomOf="@+id/guidelineSocials"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/txtGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            app:layout_constraintStart_toStartOf="@id/googleLogin"
            app:layout_constraintEnd_toEndOf="@id/googleLogin"
            app:layout_constraintTop_toTopOf="@id/googleLogin"
            app:layout_constraintBottom_toBottomOf="@id/googleLogin"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStartT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStartE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.31" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEditStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.39" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStartSName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.49" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEmailStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.59" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePassStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.69" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.79" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineSocials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.88" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>