<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/g_card_background"
    app:cardUseCompatPadding="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_ad"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
             />

        <TextView
            android:id="@+id/tv_ad_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/scotch_premium"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_ad"
            app:layout_constraintTop_toTopOf="@id/img_ad"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/tv_ad_price"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="@id/tv_ad_name"
            app:layout_constraintTop_toBottomOf="@id/tv_ad_name"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/sf_pro_display"/>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_add_to_cart"
            android:layout_width="77dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ad_price"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

        <LinearLayout
            android:layout_width="23dp"
            android:layout_height="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/icon_background"
            android:orientation="vertical">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_favorite"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>